--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URI =  "mongodb+srv://matangi:mertangy@moringa.ocqyjps.mongodb.net/?retryWrites=true&w=majority"
+# MONGODB_URI =  "mongodb+srv://matangi:matangi@moringa.ocqyjps.mongodb.net/yolomy?retryWrites=true&w=majority"
+# user ='admin'
+# pass='password'
