Made changes to mongo URI,app working locally

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-# MONGODB_URI =  "mongodb+srv://matangi:matangi@moringa.ocqyjps.mongodb.net/yolomy?retryWrites=true&w=majority"
-# user ='admin'
-# pass='password'
+MONGODB_URI =  "mongodb+srv://mertangy:mertangy@gallery.cj6v9ym.mongodb.net/yolo?retryWrites=true&w=majority"
+db_name= 'yolo'
+username ='mertangy'
+password='mertangy'
