--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,44 @@
 version: '3.9'
 services:
-  client:
-    build: ./client
+
+  #Our mongo database service
+  mongo:
+
+    #Using the latest mongo image
+    image: mongo
+    #Restart in case of any failures
+    restart: always
     ports:
-      - '3001:3000'
-    working_dir: /client
+      - "27027:27027"
+    
+    #Where mongo data will be stored on the local machine
+    volumes:
+      - mongodb-data:/data/db
+    
+    #Mongo atlas database credentials
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: matangi
+      MONGO_INITDB_ROOT_PASSWORD: matangi
   
+  #The backend servive
   backend:
     build: ./backend
     ports:
-    - '5001:5000'
+    - "5000:5000"
     depends_on:
       - mongo
   
-  mongo:
-    image: mongo
-    restart: always
+  #The frontend service
+  client:
+    build: ./client
     ports:
-      - 2717:27017
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
+      - "3000:3000"
 
-    volumes:
-      - mongodb-data:/data/db
+    #allow interactive mode
+    stdin_open: true
+    tty: true
+    depends_on:
+      - backend
 
-    
 volumes:
   mongodb-data: {}
