--- a/manifests/backend.yaml
+++ b/manifests/backend.yaml
@@ -3,18 +3,18 @@ kind: Deployment
 metadata:
   name: yolo-backend
   labels:
-    app: yolo-backend
+    app: yolo-api
     
 spec:
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       labels:
-        app: yolo-backend
+        app: yolo-api
     spec:
       containers:
-        - name: backendcontainer
-          image: mertangy/yolo-backend:v1
+        - name: yolo-api
+          image: mertangy/yolo-backend:v1.0.0
           ports:
             - containerPort: 5000
           volumeMounts:
@@ -28,12 +28,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: yolo-back
-  labels:
-    app: yolo-backend
+  name: yolo-backend-service
 spec:
   selector:
-    app: yolo-backend
+    app: yolo-api
   ports:
     - port: 5000
       targetPort: 5000
